# ai-video-summarizer

./: .gitignore  README.md  main.py  pyproject.toml
lib/: audio_tools.py  video_tools.py  yt.py
