[project]
name = "ai-video-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "imagehash>=4.3.1",
    "mlx-whisper>=0.4.1",
    "openai>=1.57.0",
    "opencv-python>=4.10.0.84",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "yt-dlp>=2024.12.3",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.2",
]
